--- a/ace-manifest.json
+++ b/ace-manifest.json
@@ -2,7 +2,7 @@
   "commands": {
     "clean:old_bookings": {
       "settings": {
-        "loadApp": false,
+        "loadApp": true,
         "stayAlive": false
       },
       "commandPath": "./commands/CleanOldBookings",
